fixed a few bugs. colors now display during ship placement instead of ship names fixed zooming issue during game play, content overflow was the culprit centered and styled hit/missed markers

--- a/src/display/styles.css
+++ b/src/display/styles.css
@@ -24,6 +24,10 @@ h1 {
     border: none;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 #name {
     color: black;
     font-size: 1.5rem;
@@ -51,22 +55,26 @@ h1 {
 }
 
 #placementBoardContainer{
-    border: 1px solid red;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     gap: 5px;
     width: 48%;
     justify-self: center;
     margin-bottom: 4rem;
+    grid-column: 1 / 3;
 }
+
 .cell, .cpuCell {
     aspect-ratio: 1;
     background-color: rgb(172, 172, 172);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    font-size: 3.5rem;
 }
-
 #gameDisplay {
     display: none;
-    border: 1px solid red;
     gap: 10px;
     padding-left: 10%;
     padding-right: 10%;
@@ -78,6 +86,7 @@ h1 {
     justify-self: center;
     color: rgb(172, 172, 172);
     font-size: 2.5rem;
+    grid-column: 1 / 3;
 }
 
 #axisBtn {
@@ -88,11 +97,10 @@ h1 {
     background-color: rgb(172, 172, 172);
     border: none;
     border-radius: 15px;
+    grid-column: 1 / 3;
 }
 
 #playerBoardContainer {
-
-    border: 3px solid green;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     gap: 3px;
@@ -101,8 +109,6 @@ h1 {
 }
 
 #cpuBoardContainer {
-
-    border: 3px solid blue;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     gap: 3px;
@@ -110,13 +116,17 @@ h1 {
 }
 
 .cell--hit::after {
-    content: '✕';
+    content: '•';
     color: red;
 }
 
 .cell--miss::after {
-    content: '○';
+    content: '•';
     color: white;
+}
+
+.cell--valid:hover {
+  cursor: pointer;
 }
 
 .cell--carrier {
